third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking-lang-v2.2/lambda/inline-parity/inlining1.exp
module 0x42::Test {
    fun foo(f: |u64|(u64), x: u64): u64 {
        f(x)
    }
    public fun main() {
        if (!(test() == 3)) abort 5;
    }
    public fun test(): u64 {
        foo(|arg0| __lambda__1__test(arg0), 10)
    }
    fun __lambda__1__test(param$0: u64): u64 {
        3
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: invalid character
   ┌─ inlining1.move:11:32
   │
11 │     fun __lambda__1__test(param$0: u64): u64 {
   │                                ^ Invalid character: `$`
